# atlas

./: .gitignore  JUDGES.md  README.md  TESTING.md  render.yaml  run.sh  setup.sh
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/atlas/: __init__.py  config.py  records.py  store.py  timeline.py
backend/atlas/api/: __init__.py  app.py  routes.py
backend/atlas/embeddings/: __init__.py  embedder.py  pipeline.py  retriever.py
backend/atlas/graph/: __init__.py  builder.py  traverse.py
backend/atlas/impact/: __init__.py  analyzer.py
backend/atlas/indexer/: __init__.py  code_parser.py  docs_parser.py  git_history.py  github_sync.py  pipeline.py  refs.py
backend/atlas/models/: __init__.py  domain.py  schemas.py
backend/atlas/reasoning/: __init__.py  llm.py  pipeline.py  prompts.py
backend/atlas/replay/: __init__.py  builder.py
backend/scripts/: smoke.py
backend/seed/: traces.json
backend/tests/: test_engine.py
demo/: build-demo-git-history.sh
demo/acme-fintech-platform/: README.md
demo/acme-fintech-platform/.atlas/: pulls.json  slack-export.json
demo/acme-fintech-platform/incidents/: INC-284.md
demo/acme-fintech-platform/tests/: auth.service.spec.ts
docs/: CODEX.md  DEMO_SCRIPT.md  DEPLOY.md  SUBMISSION.md
docs/adr/: ADR-001-knowledge-graph-over-rag.md  ADR-002-storage-abstraction.md  ADR-003-live-and-mock-llm.md
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/: api.ts  extension.ts
extension/src/panel/: AtlasViewProvider.ts
(+15 files in other folders)
