[project]
name = "atlas-engine"
version = "0.1.0"
description = "Atlas — an engineering memory engine that reconstructs why code exists."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "alembic>=1.13",
    "gitpython>=3.1",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
    "networkx>=3.2",
    "langgraph>=0.0.40",
    "langchain-core>=0.1.40",
    "openai>=1.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
